frame/support/test/tests/pallet_ui/storage_multiple_getters.stderr
error: Invalid pallet::storage, multiple argument pallet::getter found
  --> $DIR/storage_multiple_getters.rs:20:22
   |
20 |     #[pallet::getter(fn foo_error)]
   |                         ^^^^^^^^^
